--- a/JavaScript/Tutorial_13 (Exercise_1)/index.html
+++ b/JavaScript/Tutorial_13 (Exercise_1)/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial 12</title>
+    <title>Tutorial 13 (Exercise 1)</title>
 </head>
 <body>
     <div class="container">
