JavaScript Tutorial_22 (Project_1) all files updated

--- a/JavaScript/Tutorial_22 (Project_1)/index.html
+++ b/JavaScript/Tutorial_22 (Project_1)/index.html
@@ -29,6 +29,9 @@
         <h1 class="text-center">Welcome to My Notes</h1>
         <div class="card">
             <div class="card-body">
+                <div class="form-group">
+                    <input class="form-control" id="heading" maxlength="35" placeholder= "Input Heading" required></input>
+                </div>
                 <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
                     <textarea class="form-control" id="addText" rows="3" style="box-shadow:none"></textarea>
